bonus part done

--- a/index.html
+++ b/index.html
@@ -38,8 +38,7 @@
                             <h4 class="text-center mt-3 fw-semibold">Angel Di Maria</h4>
                             <h6 class="text-center mt-1 text-secondary">39 Goals ● 11 Assists</h6>
                             <div>
-                                <button
-                                    class="w-75 d-block mx-auto bg-primary text-white  fw-semibold py-2 fs-5 btn-disable"
+                                <button class="w-75 d-block mx-auto text-white  fw-semibold py-2 fs-5 btn-bg"
                                     onclick="addToList(this)">SELECT</button>
                             </div>
                         </div>
@@ -52,7 +51,7 @@
                             <h4 class="text-center mt-3 fw-semibold">Kylian Mbappe</h4>
                             <h6 class="text-center mt-1 text-secondary">69 Goals ● 41 Assists</h6>
                             <div>
-                                <button class="w-75 d-block mx-auto bg-primary text-white  fw-semibold py-2 fs-5"
+                                <button class="w-75 d-block mx-auto text-white  fw-semibold py-2 fs-5 btn-bg"
                                     onclick="addToList(this)">SELECT</button>
                             </div>
                         </div>
@@ -65,7 +64,7 @@
                             <h4 class="text-center mt-3 fw-semibold">Ricardo Kaka</h4>
                             <h6 class="text-center mt-1 text-secondary">88 Goals ● 15 Assists</h6>
                             <div>
-                                <button class="w-75 d-block mx-auto bg-primary text-white  fw-semibold py-2 fs-5"
+                                <button class="w-75 d-block mx-auto text-white  fw-semibold py-2 fs-5 btn-bg"
                                     onclick="addToList(this)">SELECT</button>
                             </div>
                         </div>
@@ -78,7 +77,7 @@
                             <h4 class="text-center mt-3 fw-semibold">Sergio Aguero</h4>
                             <h6 class="text-center mt-1 text-secondary">30 Goals ● 15 Assists</h6>
                             <div>
-                                <button class="w-75 d-block mx-auto bg-primary text-white  fw-semibold py-2 fs-5"
+                                <button class="w-75 d-block mx-auto text-white  fw-semibold py-2 fs-5 btn-bg"
                                     onclick="addToList(this)">SELECT</button>
                             </div>
                         </div>
@@ -91,7 +90,7 @@
                             <h4 class="text-center mt-3 fw-semibold">Neymar Jr.</h4>
                             <h6 class="text-center mt-1 text-secondary">90 Goals ● 100 Assists</h6>
                             <div>
-                                <button class="w-75 d-block mx-auto bg-primary text-white  fw-semibold py-2 fs-5"
+                                <button class="w-75 d-block mx-auto text-white  fw-semibold py-2 fs-5 btn-bg"
                                     onclick="addToList(this)">SELECT</button>
                             </div>
                         </div>
@@ -104,7 +103,7 @@
                             <h4 class="text-center mt-3 fw-semibold">Lewandowski</h4>
                             <h6 class="text-center mt-1 text-secondary">115 Goals ● 110 Assists</h6>
                             <div>
-                                <button class="w-75 d-block mx-auto bg-primary text-white  fw-semibold py-2 fs-5"
+                                <button class="w-75 d-block mx-auto text-white  fw-semibold py-2 fs-5 btn-bg"
                                     onclick="addToList(this)">SELECT</button>
                             </div>
                         </div>
@@ -117,7 +116,7 @@
                             <h4 class="text-center mt-3 fw-semibold">Lionel Messi</h4>
                             <h6 class="text-center mt-1 text-secondary">200 Goals ● 111 Assists</h6>
                             <div>
-                                <button class="w-75 d-block mx-auto bg-primary text-white  fw-semibold py-2 fs-5"
+                                <button class="w-75 d-block mx-auto text-white  fw-semibold py-2 fs-5 btn-bg"
                                     onclick="addToList(this)">SELECT</button>
                             </div>
                         </div>
@@ -131,7 +130,7 @@
                             <h4 class="text-center mt-3 fw-semibold">Christian Ronaldo</h4>
                             <h6 class="text-center mt-1 text-secondary">199 Goals ● 199 Assists</h6>
                             <div>
-                                <button class="w-75 d-block mx-auto bg-primary text-white  fw-semibold py-2 fs-5"
+                                <button class="w-75 d-block mx-auto text-white  fw-semibold py-2 fs-5 btn-bg"
                                     onclick="addToList(this)">SELECT</button>
                             </div>
                         </div>
@@ -145,8 +144,7 @@
                             <h4 class="text-center mt-3 fw-semibold">Zaltan Ibrahimovic</h4>
                             <h6 class="text-center mt-1 text-secondary">211 Goals ● 100 Assists</h6>
                             <div>
-                                <button
-                                    class="w-75 d-block mx-auto bg-primary text-white  fw-semibold py-2 fs-5 clicked"
+                                <button class="w-75 d-block mx-auto text-white  fw-semibold py-2 fs-5  btn-bg"
                                     onclick="addToList(this)">SELECT</button>
                             </div>
                         </div>
@@ -180,7 +178,8 @@
                         <div class="d-flex justify-content-evenly mt-3">
                             <h4>Coach</h4>&nbsp;<input type="text" id="coach-field">
                         </div>
-                        <button class="w-75 d-block mx-auto bg-primary text-white py-2 fs-5 mt-4" id="calculate-total">Calculate
+                        <button class="w-75 d-block mx-auto bg-primary text-white py-2 fs-5 mt-4"
+                            id="calculate-total">Calculate
                             Total</button>
                         <div class="d-flex mt-5 mb-4 justify-content-evenly">
                             <h4>Total</h4>
